# webrtc-datachannels

./: .clang-format  .directory  .dockerignore  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  AUTHORS.txt  CMakeLists.txt  Dependencies.cmake  LICENSE.md  ProjectFiles.cmake  README.md  THIRD_PARTY_LICENSES.md  boost.cmake  conanfile.py  doxyfile.in  todo.txt  travis.yml
assets/: conf.lua
assets/certs/: create_example_certs.sh  rootCA.srl
assets/configuration_files/: server_conf.lua
client/: example-client.html  example-client.js
cmake/: FindLuaJIT.cmake  Findg3log.cmake  Utils.cmake  beast-all.imp  boost-all.imp  configure_doxygen.cmake  create_doxy_mcss.cmake  iwyu.imp  testRunner.cmake
cmake/modules/: CppCheck.cmake  FindAbseil.cmake  FindLuaJIT.cmake  FindSanitizers.cmake
docs/: CMakeLists.txt  Doxyfile-mcss  Doxyfile.in  namespaces.dox
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt
examples/client/assets/certs/: dh.pem  rootCA.pem
examples/client/src/: GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp  ServerManagerBase.cpp  WRTCServerManager.cpp  WSServerManager.cpp  WSServerManager.hpp  main.cpp
examples/gameclient/: CMakeLists.txt
examples/gameclient/assets/certs/: rootCA.key  server.csr
examples/gameclient/assets/configuration_files/: server_conf.lua
examples/gameclient/src/: GameClient.cpp  GameClient.hpp  ServerManagerBase.cpp  ServerManagerBase.hpp  WRTCServerManager.cpp  WRTCServerManager.hpp  WSServerManager.cpp  WSServerManager.hpp  main.cpp
examples/gameserver/: CMakeLists.txt
examples/gameserver/assets/certs/: server.crt  server.key
examples/gameserver/src/: GameServer.cpp  GameServer.hpp  ServerManagerBase.cpp  ServerManagerBase.hpp  WRTCServerManager.cpp  WRTCServerManager.hpp  WSServerManager.cpp  WSServerManager.hpp  main.cpp
examples/httpclient/: CMakeLists.txt
examples/httpclient/src/: main.cpp
examples/server/: CMakeLists.txt
examples/server/src/: GameServer.cpp  ServerManagerBase.hpp  WRTCServerManager.cpp  WSServerManager.cpp  main.cpp  main.cpp.autosave
examples/webclient/: example-client.js
lib/sol3/: sol.hpp
patches/folly/: 0001-clang-cling-conan-support.patch
scripts/: WebrtcTestSimple2Peers.cpp  build_clean.sh  build_fresh_webrtc.sh  build_iwyu.sh  build_iwyu_submodule.sh  build_project.sh  build_project_addr_sanitized.sh  build_project_cppcheck.sh  build_project_mem_sanitized.sh  build_project_thread_sanitized.sh  build_valgring_tests.sh  check_with_iwyu.sh  clone_fresh_webrtc.sh  code_coverage.sh  combine_webrtc_libs.sh  create_example_certs.sh  install_cmake.sh  install_folly.sh  install_g3log.sh  rebuild_clean.sh  release_project.sh  run_html_client.sh  setup_gtest.sh  setup_qt5.sh  test_webrtc_p2p.sh
src/: dispatch_queue.cpp  dispatch_queue.h  dispatch_queue.hpp  main.cpp  observers.cpp  observers.h  observers.hpp
src/algo/: CallbackManager.cpp  CallbackManager.hpp  DispatchQueue.cpp  DispatchQueue.hpp  NetworkOperation.cpp  NetworkOperation.hpp  StringUtils.cpp  StringUtils.hpp  TickManager.cpp  TickManager.hpp
src/algorithm/: CallbackManager.cpp  CallbackManager.hpp  DispatchQueue.cpp  DispatchQueue.hpp  NetworkOperation.cpp  NetworkOperation.hpp  StringUtils.cpp  StringUtils.hpp
src/config/: ServerConfig.cpp  ServerConfig.hpp  config.cpp  config.hpp
src/filesystem/: path.cpp  path.hpp
src/log/: Logger.cpp  Logger.hpp
src/lua/: LuaScript.cpp  LuaScript.hpp  lua.cpp  lua.hpp
src/net/: ConnectionManagerBase.cpp  ConnectionManagerBase.hpp  MetaData.hpp_.OLD  NetworkManager.cpp  NetworkManager.hpp  NetworkManagerBase.cpp  NetworkManagerBase.hpp  SessionBase.cpp  SessionBase.hpp  SessionI.cpp  SessionI.hpp  SessionManager.cpp  SessionManager.hpp  SessionManagerBase.cpp  SessionManagerBase.hpp  SessionManagerI.cpp  SessionManagerI.hpp  SessionPair.cpp  SessionPair.hpp  WRTCServer.cpp  WRTCServer.hpp  WsListener.cpp  WsListener.hpp  WsSession.cpp  WsSession.hpp  WsSessionManager.cpp  WsSessionManager.hpp  core.hpp
src/net/http/: Client.cpp  Client.hpp  HTTPNetworkOperation.hpp  SessionGUID.hpp
src/net/http/server/: HTTPServerNetworkManager.cpp  HTTPServerNetworkManager.hpp  Listener.cpp.OLD  Listener.hpp.OLD  ServerConnectionManager.cpp  ServerConnectionManager.hpp  ServerInputCallbacks.cpp  ServerInputCallbacks.hpp  ServerSession.cpp  ServerSession.hpp  ServerSessionManager.cpp  ServerSessionManager.hpp
src/net/webrtc/: Observers.cpp  Observers.hpp  WRTCServer.cpp  WRTCServer.hpp  WRTCSession.cpp  WRTCSession.hpp
src/net/websockets/: WsListener.cpp  WsListener.hpp  WsServer.cpp  WsServer.hpp  WsSession.cpp  WsSession.hpp  WsSessionManager.cpp  WsSessionManager.hpp  websockets.cpp
src/net/wrtc/: Callbacks.cpp  Callbacks.hpp  Observers.cpp  Observers.hpp  PeerConnectivityChecker.cpp  PeerConnectivityChecker.h  PeerConnectivityChecker.hpp  SessionGUID.hpp  SessionManager.cpp  SessionManager.hpp  Timer.cpp  Timer.h  WRTCServer.cpp  WRTCServer.hpp  WRTCSession.cpp  WRTCSession.hpp  wrtc.hpp
src/net/ws/: Callbacks.cpp  Callbacks.hpp  NetworkSession.hpp.OLD  SessionGUID.hpp  SessionManager.cpp  SessionManager.hpp  WsListener.cpp  WsListener.hpp  WsNetworkOperation.hpp  WsServer.cpp  WsServer.hpp  WsSession.cpp  WsSession.hpp
src/net/ws/client/: Client.cpp  Client.hpp  ClientConnectionManager.cpp  ClientConnectionManager.hpp  ClientInputCallbacks.cpp  ClientInputCallbacks.hpp  ClientSession.cpp  ClientSession.hpp  ClientSessionManager.cpp  ClientSessionManager.hpp  WSClientNetworkManager.hpp
src/net/ws/server/: Listener.cpp  ServerConnectionManager.cpp  ServerConnectionManager.hpp  ServerInputCallbacks.cpp  ServerInputCallbacks.hpp  ServerSession.cpp  ServerSession.hpp  ServerSessionManager.cpp  ServerSessionManager.hpp  WSServerNetworkManager.hpp
src/storage/: path.cpp  path.hpp
src/websockets/: websockets.hpp
submodules/: CMakeLists.txt
test/: testServer.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  main.cpp  server.test.cpp  testsCommon.h  utils.test.cpp
